--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "wordpress"
     ],
     "license": "MIT",
-    "homepage": "https://github.com/laraish/pagination",
+    "homepage": "https://github.com/seven-ario/laraish_pagination.git",
     "support": {
         "issues": "https://github.com/laraish/pagination/issues",
         "source": "https://github.com/laraish/pagination"
@@ -19,10 +19,10 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "laraish/contracts": "^2.0",
-        "laraish/support": "^2.0",
-        "illuminate/contracts": "^8.0"
+        "php": "8.1.9",
+        "sevrn-ario/laraish_contracts": "master",
+        "sevrn-ario/laraish_support": "master",
+        "illuminate/contracts": "10.x-dev"
     },
     "autoload": {
         "psr-4": {
