--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,7 @@
         }
     ],
     "require": {
-        "php": "8.1.9",
-        "seven-ario/laraish_contracts": "^1.0",
-        "seven-ario/laraish_support": "^1.0",
-        "illuminate/contracts": "10.x-dev"
+        "php": "8.1.9"
     },
     "autoload": {
         "psr-4": {
