--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
         }
     ],
     "require": {
-        "php": "8.1.9"
+        "php": "8.1.9",
+        "seven-ario/laraish_contracts": "^1.0",
+        "seven-ario/laraish_support": "^1.0",
+        "illuminate/contracts": "dev-master"
     },
     "autoload": {
         "psr-4": {
