--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "php": "8.0",
+        "php": "^8.0",
         "seven-ario/laraish_contracts": "^1.0",
         "seven-ario/laraish_support": "^1.0"
     },
